[gd_scene load_steps=9 format=3 uid="uid://28vqp5eny63q"]

[ext_resource type="Script" uid="uid://4o6pcx7rb6js" path="res://Scripts/main_menu.gd" id="1_1ehe0"]
[ext_resource type="Texture2D" uid="uid://dkii4ifgevwcy" path="res://Resources/Images/Screenshot 2025-11-13 121808.png" id="1_28flt"]
[ext_resource type="FontFile" uid="uid://3ino77dm4we3" path="res://Resources/Fonts/Creepster-Regular.ttf" id="2_48xlc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_48xlc"]
texture = ExtResource("1_28flt")
modulate_color = Color(0.32899237, 0.4472676, 0.47405463, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_erv1k"]
bg_color = Color(0.58400303, 0.55947256, 0.8451648, 1)
corner_radius_top_left = 48
corner_radius_top_right = 48
corner_radius_bottom_right = 48
corner_radius_bottom_left = 48
shadow_size = 4
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48xlc"]
bg_color = Color(0.19436643, 0.16659859, 0.3633779, 1)
corner_radius_top_left = 48
corner_radius_top_right = 48
corner_radius_bottom_right = 48
corner_radius_bottom_left = 48
shadow_size = 4
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ehe0"]
bg_color = Color(0.32522053, 0.28091994, 0.57091224, 1)
corner_radius_top_left = 48
corner_radius_top_right = 48
corner_radius_bottom_right = 48
corner_radius_bottom_left = 48
shadow_size = 4
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_48xlc"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_1ehe0")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_48xlc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.28
anchor_top = 0.39166668
anchor_right = 0.715
anchor_bottom = 0.845
offset_top = -1.5258789e-05
offset_bottom = -3.0517578e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.875, 0.875, 0.875, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_erv1k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_48xlc")
text = "Start Game
"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_constants/h_separation = 4
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_erv1k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_48xlc")
text = "Options
"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_erv1k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_48xlc")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -227.5
offset_top = 74.0
offset_right = 227.5
offset_bottom = 169.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.906957, 0.49159575, 0.34475562, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 80
text = "DREAM CATCHER"
horizontal_alignment = 3
vertical_alignment = 3
autowrap_mode = 3

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_pressed"]
